istioctl/cmd/testdata/auth/converter/cluster-rbac-config-on-with-exclusion.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_EXCLUSION'
  exclusion:
    namespaces: ["ns1", "ns2"]
