istioctl/cmd/testdata/auth/converter/one-rule-one-service.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: my-root-namespace
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-productpage-0
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: productpage
---
